public enum Status
{

    CHILD, ADULT, VIP

}
